--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@mantine/carousel": "^6.0.19",
+    "@mantine/core": "^6.0.19",
+    "@mantine/ds": "^6.0.19",
+    "@mantine/hooks": "^6.0.19",
+    "@mantine/prism": "^6.0.19",
+    "@tabler/icons-react": "^2.30.0",
+    "embla-carousel-react": "^8.0.0-rc11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
