--- a/frontend-1/package.json
+++ b/frontend-1/package.json
@@ -27,6 +27,7 @@
     "install": "^0.13.0",
     "npm": "^9.8.1",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
