--- a/frontend-1/package.json
+++ b/frontend-1/package.json
@@ -30,6 +30,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-comments-section": "^2.0.10",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-lazy-load-image-component": "^1.6.0",
     "react-player": "^2.12.0",
     "react-router-dom": "^6.15.0",
