--- a/frontend-1/package.json
+++ b/frontend-1/package.json
@@ -62,6 +62,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-lazy-load-image-component": "^1.5.3"
   }
 }
