--- a/frontend-1/package.json
+++ b/frontend-1/package.json
@@ -26,6 +26,7 @@
     "embla-carousel-react": "^7.1.0",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
+    "react-animated-heart": "^0.0.8",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-lazy-load-image-component": "^1.6.0",
